@@ -1,13 +1,40 @@
+::   This command file starts the Interactive Brokers' Trader Workstation (TWS).
+
+@echo off
+setlocal enableextensions enabledelayedexpansion
+
+::   It's likely that the only thing you need to change in this file is the version
+::   number setting. 
+
+::   You can find the TWS major version number by running TWS, then clicking 
+::   Help > About Trader Workstation. In the displayed information you'll see a
+::   line like this:
+::
+::    Build 954.2a, Oct 30, 2015 4:07:54 PM
+::
+::   Here the major version number is 954. Do not include the rest of the version number in
+::   this setting:
+
+set TWS_MAJOR_VRSN=952
+
+
 ::   If your TWS user id and password are not included in the IBController 
-::   configuration file, set them here (do not encrypt the password):
+::   configuration file, set them here (do not encrypt the password). However
+::   You are strongly advised not to set them here since this file is not 
+::   normally in a protected location:
 
 set TWSUSERID=
 set TWSPASSWORD=
 
 
+::   The folder where TWS is installed:
+
+set TWS_PATH=C:\Jts
+
+
 ::   The folder containing the IBController files:
 
-set IBCDIR=C:\IBController
+set IBC_PATH=C:\IBController
 
 
 ::   The location and filename of the IBController configuration file. This file should
@@ -17,49 +44,9 @@ set IBCDIR=C:\IBController
 ::   environment variable to address the root of your personal filestore (HOMEPATH is set
 ::   automatically by Windows):
 
-set IBCINI="%HOMEPATH%\Documents\IBController\IBController.ini"
+set IBC_INI=%HOMEPATH%\Documents\IBController\IBController.ini
 
+::   now launch IBController
 
-::   The folder where TWS is installed:
-
-set TWSDIR=C:\Jts\
-
-
-::   The classpath for TWS. The value below is correct for version
-::   942 (you can verify which version of TWS you are using by going
-::   to the Help | About Trader Workstation menu in TWS).
-::
-::   For other versions of TWS, the information needed may change.
-::   You can find the required information in the shortcut created when you 
-::   installed TWS. 
-::
-::   To locate this in Windows 7, right click on the start menu entry for 
-::   TWS and click Properties. In Windows 8, locate the tile for TWS in 
-::   the start screen, right click it, and select 'Open file location' on the menu 
-::   bar at the bottom of the screen. 
-::
-::   In the field labelled 'Target', select everything after "-cp " up to the 
-::   first subsequent space character, then press Ctrl-C to copy it to the 
-::   clipboard, then paste it into the following command, replacing everything 
-::   after the "=" character:
-
-set TWSCP=jts.jar;total.2012.jar
-
-
-::   Other Java VM options for TWS. You can find this information in the 
-::   shortcut created when you installed TWS. (Note that in the shortcut, 
-::   jclient/LoginFrame is NOT part of the Java options, nor is anything 
-::   that comes after it, so don't include that here):
-
-set JAVAOPTS=-Dsun.java2d.noddraw=true -Dswing.boldMetal=false -Dsun.locale.formatasdefault=true -Xmx1024M -XX:MaxPermSize=256M
-
-
-pushd %TWSDIR%
-:: prevent other Java tools interfering with IBController
-
-setlocal
-set JAVA_TOOL_OPTIONS
-=
-java.exe -cp  %TWSCP%;%IBCDIR%\IBController.jar %JAVAOPTS% ibcontroller.IBController %IBCINI% %TWSUSERID% %TWSPASSWORD%
-popd
+call Scripts\IBController.bat %TWS_MAJOR_VRSN% "/TwsPath:%TWS_PATH%" "/IbcPath:%IBC_PATH%" "/IbcIni:%IBC_INI%" /User:%TWSUSERID% /PW:%TWSPASSWORD%
 
